# otaflux

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  lefthook.yml  mise.toml  renovate.json
.github/: release-drafter.base.yaml  release-drafter.helm.yaml  release-drafter.main.yaml  release-drafter.yaml
.github/workflows/: build.yaml  helm.yaml
deploy/: Chart.yaml  values.yaml
deploy/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  secret-cosign-pub-key.yaml  secret-mqtt-tls.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deploy/templates/tests/: test-connection.yaml
docs/: architecture.md  configuration.md  cosign.md  mqtt.md  webhooks.md
src/: config.rs  firmware_manager.rs  lib.rs  main.rs  notifier.rs  registry.rs
src/api/: endpoints.rs  mod.rs  router.rs
src/api/webhooks/: harbor.rs  mod.rs
src/firmware/: manager.rs  models.rs
src/metrics/: middleware.rs  router.rs
src/registry/: client.rs  models.rs
tests/: firmware_test.rs  health_test.rs  version_test.rs  webhook_test.rs
tests/common/: mod.rs
