[package]
name = "otaflux"
version = "0.1.0"
authors = ["Etienne Tremel <995474+etiennetremel@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
description = "An OTA (Over-the-Air) firmware update server that fetches, caches, and serves firmware binaries from OCI-compatible container registry."
homepage = "https://github.com/etiennetremel/otaflux"
repository = "https://github.com/etiennetremel/otaflux"

[lib]
path = "src/lib.rs"

[[bin]]
name = "otaflux"
path = "src/main.rs"

[dependencies]
tokio-util = "0.7.15"
parking_lot = "0.12"
tokio = { version = "1.45.0", features = ["full"] }
crc32fast = "1.4.2"
bytes = "1.10.1"
axum = { version = "0.8", features = ["json", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["trace"] }
metrics = { version = "0.24", default-features = false }
metrics-exporter-prometheus = { version = "0.17", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
semver = "1.0.26"
tracing = "0.1.37"
anyhow = "1.0.75"
oci-client = "0.15.0"
rumqttc = { version = "0.24.0", features = ["url"] }
clap = { version = "4.5", default-features = false, features = [
  "color",
  "derive",
  "error-context",
  "help",
  "std",
  "env",
  "suggestions",
  "usage",
] }
sigstore = { version = "0.12", features = ["cosign"] }

[dependencies.reqwest]
version = "0.12"
features = ["json", "native-tls-vendored"]

[dev-dependencies]
testcontainers = "0.26.3"
testcontainers-modules = { version = "0.14.0", features = ["mosquitto"] }
tokio = { version = "1.45.0", features = ["test-util"] }
tower = { version = "0.5.2", features = ["util"] }
wiremock = "0.6"
sha2 = "0.10"
